ingress-controller/ingress-configuration.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Ingress-config
  namespace: shortner
  annotations:
    nginx.ingress.kubernetes.io/websocket-services: "url-ws-server"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "ws-session"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    argocd.argoproj.io/sync-wave: "1"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: api.shortner.services
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-server
            port:
              number: 8000

  - host: web.shortner.services
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: url-web
            port:
              number: 3000

  - host: ws-server.shortner.services
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: url-ws-server
            port:
              number: 8080
  - host: analytics.shortner.services
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: url-analytics
            port:
              number: 3006
              
  - host: argocd.shortner.services
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443                     
  tls :
    - hosts:
        - shortner.services
      secretName : shortner-secret
